--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>spring-security-web</artifactId>
             <version>4.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
 
     <properties>
